--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h3 id="jsontitle"></h3>
+   
     
    
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
